watch name desc added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
 
     }
 
+    .watch-name {
+                font-size: 17px;
+            }
+
+            .desc {
+                font-size: 15px;
+            }
+
+
 </style>
 
 
@@ -47,3 +56,7 @@
             <div class="watch-img-container">
                 <img src="./smartwatch.png" class="watch-img">
             </div>
+
+            <h3 class="watch-name">Smart Watch D20</h3>
+            <p class="desc">Water proof(not for swimming) Smart fitness Band with Bluetooth And Heart Rate sensor.</p>
+    
