--- a/index.html
+++ b/index.html
@@ -6,57 +6,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Quantity Counter</title>
     <style>
-    body {
-        background-color: #8EC5FC;
-        background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+        body {
+            background-color: #8EC5FC;
+            background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
 
-    }
+        }
 
-    .card-container {
-        background-color: white;
-        height: auto;
-        width: 250px;
-        padding: 20px;
-        margin: 50px auto;
-        border-radius: 10px;
-        box-shadow: 0 2px 10px 5px grey;
-    }
+        .card-container {
+            background-color: white;
+            height: auto;
+            width: 250px;
+            padding: 20px;
+            margin: 50px auto;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px 5px grey;
+        }
 
-    .watch-img-container {
-        width: 200px;
-        margin: 0 auto;
-        text-align: center;
-        border-radius: 10px;
-        background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104, 199, 255, 1) 0%, rgba(181, 126, 255, 1) 90%);
+        .watch-img-container {
+            width: 200px;
+            margin: 0 auto;
+            text-align: center;
+            border-radius: 10px;
+            background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104, 199, 255, 1) 0%, rgba(181, 126, 255, 1) 90%);
 
-    }
+        }
 
-    .watch-img {
-        height: 150px;
+        .watch-img {
+            height: 150px;
 
-    }
+        }
 
-    .watch-name {
-                font-size: 17px;
-            }
+        .watch-name {
+            font-size: 17px;
+        }
 
-            .desc {
-                font-size: 15px;
-            }
+        .desc {
+            font-size: 15px;
+        }
+
+        .values-container {
+
+            display: flex;
+            justify-content: space-evenly;
+            padding: 0;
+        }
+
+        .value {
+            font-size: 18px;
+        }
+
+        .total-value {
+            text-align: center;
+            font-weight: bold;
+            font-size: 18px;
+        }
+    </style>
 
 
-</style>
 
 
 
+<body>
+    <div class="card-container">
+        <div class="watch-img-container">
+            <img src="./smartwatch.png" class="watch-img">
+        </div>
 
+        <h3 class="watch-name">Smart Watch D20</h3>
+        <p class="desc">Water proof(not for swimming) Smart fitness Band with Bluetooth And Heart Rate sensor.</p>
 
-    <body>
-        <div class="card-container">
-            <div class="watch-img-container">
-                <img src="./smartwatch.png" class="watch-img">
-            </div>
+        <div class="values-container">
 
-            <h3 class="watch-name">Smart Watch D20</h3>
-            <p class="desc">Water proof(not for swimming) Smart fitness Band with Bluetooth And Heart Rate sensor.</p>
-    
+            <span class="value"><b>₹ 699/-</b></span>
+            <span class="value" id="items-value">1 x 699</span>
+
+        </div>
+
+        <p class="total-value" id="total-value">Total: 699</p>
