changes are added

--- a/index.html
+++ b/index.html
@@ -61,14 +61,41 @@
             font-size: 18px;
         }
 
+        .incre-decre-container {
+            height: 30px;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            padding: 5px;
+
+        }
+
         .incre-decre-value {
-                font-size: 18px;
+            font-size: 20px;
 
-            }
+        }
 
-            .incre-decre-img {
-                height: 25px;
-            }
+        .incre-decre-img {
+            height: 30px;
+            cursor: pointer;
+        }
+
+        .btn {
+            display: block;
+            margin: 0 auto;
+            font-weight: bold;
+            margin-top: 10px;
+            padding: 5px 18px;
+            border-radius: 20px;
+            background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104, 199, 255, 1) 0%, rgba(181, 126, 255, 1) 90%);
+            border: 2px solid blueviolet;
+            cursor: pointer;
+        }
+
+        .btn:hover {
+            background-image: linear-gradient(178.5deg, rgba(122, 231, 248, 1) 6.5%, rgba(86, 118, 191, 1) 90.9%);
+            color: white;
+        }
 
     </style>
 
@@ -100,3 +127,9 @@
             <img src="./plus.png" class="incre-decre-img" onClick='increaseQuantity()' />
 
         </div>
+
+        <button type="button" class="btn">Buy Now </button>
+
+    </div>
+
+
