--- a/index.html
+++ b/index.html
@@ -97,6 +97,54 @@
             color: white;
         }
 
+
+        @media screen and (min-width:320px) and (max-width:370px) {
+            .card-container {
+                height: 70%;
+                width: 70%;
+                margin: 50px auto;
+
+            }
+
+            .watch-img-container {
+                width: 170px;
+            }
+
+            .watch-img {
+                height: 120px;
+            }
+
+            .watch-name {
+                font-size: 17px;
+            }
+
+            .desc {
+                font-size: 15px;
+            }
+
+            .value {
+                font-size: 16px;
+            }
+
+            .total-value {
+                font-size: 16px;
+            }
+
+            .incre-decre-value {
+                font-size: 18px;
+
+            }
+
+            .incre-decre-img {
+                height: 25px;
+            }
+
+            .btn {
+                padding: 5px 15px;
+
+            }
+        }
+
     </style>
 
 
