media querry is added

--- a/index.html
+++ b/index.html
@@ -145,6 +145,55 @@
             }
         }
 
+        @media screen and (min-width:371px) and (max-width:480px) {
+            .card-container {
+                height: 60%;
+                width: 60%;
+                margin: 50px auto;
+
+            }
+
+            .watch-img-container {
+                width: 170px;
+            }
+
+            .watch-img {
+                height: 120px;
+            }
+
+            .watch-name {
+                font-size: 17px;
+            }
+
+            .desc {
+                font-size: 15px;
+            }
+
+            .value {
+                font-size: 16px;
+            }
+
+            .total-value {
+                font-size: 16px;
+            }
+
+            .incre-decre-value {
+                font-size: 18px;
+
+            }
+
+            .incre-decre-img {
+                height: 25px;
+            }
+
+            .btn {
+                padding: 5px 15px;
+            }
+
+        }
+
+
+
     </style>
 
 
